--- a/_posts/2018-06-20-Software.md
+++ b/_posts/2018-06-20-Software.md
@@ -39,7 +39,7 @@ tags:                               #标签
 ### 如何理解软件系统的复杂性
 
 * **软件系统的复杂性=技术的+管理**
-![avatar](https://github.com/canjuly/canjuly.github.io/blob/master/img/post-bg-software/post-software-1.jpg)
+![avatar](https://raw.githubusercontent.com/canjuly/canjuly.github.io/master/img/post-bg-software/post-software-1.jpg)
 
 ### 软件架构的作用
 
